# tensorflow

./: .gitignore  WORKSPACE
tensorflow/contrib/android/java/org/tensorflow/contrib/android/: TensorFlowInferenceInterface.java
tensorflow/examples/android/: build.gradle
tensorflow/examples/android/src/com/hankcs/hanlp/: HanLP.java
tensorflow/examples/android/src/com/hankcs/hanlp/corpus/util/: CustomNatureUtility.java  EnumBuster.java  ReflectionHelper.java
tensorflow/examples/android/src/cpp/: CMakeLists.txt  ocl-jni.cpp
tensorflow/examples/android/src/org/tensorflow/demo/: CameraActivity.java  ClassifierActivity.java  TensorFlowImageClassifier.java
tensorflow/examples/label_image/: main.cc
